# Get_ytvideos_Info

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: dag1.py  dockerfile  ytvideos_info_dag.py
dags/tasks/: dockerfile  go_spider.py  scrapy.cfg
dags/tasks/getvideos/: items.py  middlewares.py  pipelines.py  settings.py
dags/tasks/getvideos/spiders/: getvideos_spider.py
src/ytvideos_info/: __init__.py  cli.py  exporter.py  models.py
tests/: test_exporter.py
